Fixed modal on mobile media queries

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,49 +3,59 @@
 @font-face {
   font-family: "CambonLight";
   src: url("./assets/fonts/Cambon-Light.ttf") format("truetype");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Inter";
   src: url("./assets/fonts/Inter.ttf") format("truetype");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Raleway";
   src: url("./assets/fonts/Raleway.ttf") format("truetype");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Catamaran";
   src: url("./assets/fonts/Catamaran.ttf") format("truetype");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Oxygen";
   src: url("./assets/fonts/Oxygen.ttf") format("truetype");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Work Sans", sans-serif;
   src: url("./assets/fonts/WorkSans.ttf") format("truetype");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Cairo";
   src: url("./assets/fonts/Cairo.ttf") format("truetype");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Museo";
   src: url("./assets/fonts/Museo.ttf") format("truetype");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Montserrat";
   src: url("./assets/fonts/Montserrat.ttf") format("truetype");
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Lovelo";
   src: url("./assets/fonts/Lovelo.otf") format("opentype");
+  font-display: swap;
 }
